--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "@ai-sdk/openai": "^1.3.23",
     "@aws-sdk/client-lambda": "^3.851.0",
     "@better-auth/expo": "^1.2.12",
+    "@hono/node-server": "^1.18.1",
     "@hono/swagger-ui": "^0.5.2",
     "@hono/zod-openapi": "^1.0.1",
     "@hono/zod-validator": "^0.4.2",
     "@scalar/hono-api-reference": "^0.5.162",
     "@types/bcryptjs": "^2.4.6",
     "ai": "^4.3.19",
-    "bcryptjs": "^2.4.3",
+    "bcryptjs": "^3.0.2",
     "better-auth": "^1.2.12",
     "dotenv": "^17.2.0",
     "drizzle-orm": "^0.44.3",
