--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,7 @@ BETTER_AUTH_SECRET=your_secret_key_here
 BETTER_AUTH_URL=http://localhost:5001
 GOOGLE_CLIENT_ID=your_google_client_id_here
 GOOGLE_CLIENT_SECRET=your_google_client_secret_here
+S3_BUCKET_NAME=your_bucket_name_here
+S3_ACCESS_KEY_ID=your_access_key_id_here
+S3_SECRET_ACCESS_KEY=your_secret_access_key_here
+S3_ENDPOINT=https://<account_id>.r2.cloudflarestorage.com/<bucket_name>
