--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@ai-sdk/google": "^1.2.22",
     "@ai-sdk/openai": "^1.3.23",
     "@aws-sdk/client-lambda": "^3.851.0",
+    "@aws-sdk/client-s3": "^3.862.0",
+    "@aws-sdk/s3-request-presigner": "^3.862.0",
     "@better-auth/expo": "^1.2.12",
     "@hono/node-server": "^1.18.1",
     "@hono/swagger-ui": "^0.5.2",
