--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ainstein-backend",
+  "name": "nusa-backend",
   "type": "module",
   "scripts": {
     "dev": "bun run --hot src/index.ts",
@@ -30,6 +30,7 @@
     "ai": "^4.3.19",
     "bcryptjs": "^3.0.2",
     "better-auth": "^1.2.12",
+    "csv-parser": "^3.2.0",
     "dotenv": "^17.2.0",
     "drizzle-orm": "^0.44.3",
     "drizzle-zod": "^0.8.2",
